--- a/frontend2-3/src/App.css
+++ b/frontend2-3/src/App.css
@@ -73,11 +73,11 @@ padding-bottom: 10px;
 }
 
 .Dashboard{
-background-image:linear-gradient(to right, silver, slategrey) 
+background: rgba(255, 245, 238, .6); 
 }
-.CardDashboard{
+/* .CardDashboard{
 display:flex; 
-}
+} */
 a {
   color: black;  
 }
@@ -87,6 +87,10 @@ button:hover{
 .CardContainer{ 
   margin: 2rem; 
 }
+.CardContainer:hover{ 
+  box-shadow: 5px 10px #888888;
+}
+
 #dashboardTitle{ 
   text-align: left; 
   margin-bottom: 0; 
