--- a/frontend2-3/src/App.css
+++ b/frontend2-3/src/App.css
@@ -56,7 +56,7 @@ padding-bottom: 10px;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .App-link {
@@ -84,7 +84,7 @@ button:hover{
   border-bottom: 1px solid black; 
 }
 .CardContainer:hover{ 
-background-color: skyblue;
+background-color: #bcbcbe;
 }
 
 #dashboardTitle{ 
