--- a/frontend2-3/src/App.css
+++ b/frontend2-3/src/App.css
@@ -13,10 +13,6 @@
   }
 }
 
-/* cat image*/
-.App img{padding-top: 15px
-}
-
 
 .NAVBAR {
   background-color: #40826D;
@@ -45,6 +41,7 @@ padding-bottom: 10px;
   font-size: 1rem;
   height: 30px;
   width: 210px;
+  margin-left:5px;
 }
 
 
@@ -72,29 +69,72 @@ padding-bottom: 10px;
   }
 }
 
-
+.dashboardLink{
+color:#40826D;
+}
 a {
   color: black;  
 }
 button:hover{ 
-  background-color: deepskyblue; 
+  background-color: rgb(2, 111, 148); 
 }
+
+
 .CardContainer{ 
   margin-top: 0; 
   border-bottom: 1px solid black; 
 }
 .CardContainer:hover{ 
-background-color: #bcbcbe;
+background-color: #bcbcbeee;
 }
 
+
+
+.title{ 
+  margin-top: 25px;
+  padding-right:10px;
+  padding-left:25px; 
+}
+
+
 #dashboardTitle{ 
-  text-align: left; 
+  text-align: middle; 
   border-bottom: 1px solid black; 
   margin-bottom: 0; 
 }
-.title{ 
-  margin-top: 0; 
-}
+
 .Modal{ 
   z-index: 1000; 
 }
+
+
+.categories{
+  padding-top:20px;
+  padding-bottom:10px;
+}
+
+/*READMORE*/
+.read{
+  color:#40826D;
+}
+
+.signupinputs{padding-bottom:20px;
+padding-top:10px;
+}
+
+.signupbutton{margin-top:10px;}
+
+
+.logininputs{
+  padding-top:20px;
+  padding-bottom:20px
+}
+.usernameinput{margin-bottom:10px;
+margin-left:5px;}
+.passwordinput{
+  margin-left: 10px;
+}
+
+
+
+
