--- a/frontend2-3/src/App.css
+++ b/frontend2-3/src/App.css
@@ -100,14 +100,93 @@ background-color: skyblue;
 }
 
 
+.vl {
+  border-left: 2px solid #40826D;
+  height: auto;
+  left: 50%;
+  margin-left: -3px;
+  margin-right: 5%;
+  top: 0;
+}
+
+
 /* Styles for Login Component */
 .loginComponent{
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: row nowrap;
 }
+
+.loginImage{
+  width: 45%
+}
+
+.loginImage img{
+  width: 90%
+}
+
+.loginForm{
+  display: flex;
+  flex-flow: column nowrap;
+  width: 100%;
+  margin-left: 20%;
+}
+
+.loginForm h1{
+text-align: center;
+font-size: 8vh;
+background-color: #40826D;
+}
+
+.loginForm h2{
+  text-align: center;
+  font-size: 5vh;
+}
+
+.loginForm button{
+  width: 30%;
+  align-self: center;
+  font-size: 3vh;
+  }
+
+.loginForm input{
+  width: 40%;
+  align-self: center;
+  font-size: 3vh;
+}
+
+.loginForm label{
+  text-align: center;
+  font-size: 3vh;
+}
+
+.loginErrors{
+  color:firebrick;
+  font-style: italic;
+}
+
 
 /* Styles for About Component */
 .aboutContainer{
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: row nowrap;
+}
+
+.aboutImageContainer{
+  width: 45%;
+}
+
+.aboutImageContainer img{
+  height: 90vh;
+  margin-top: 8%;
+}
+
+.aboutContent{
+  width: 45%;
+  text-align: left;
+}
+
+.aboutContainer h1{
+  font-size: 5em;
+  text-align: center;
+  background-color: #40826D;
 }
