--- a/frontend2-3/src/App.css
+++ b/frontend2-3/src/App.css
@@ -117,7 +117,7 @@ background-color: skyblue;
 }
 
 .loginImage{
-  width: 45%
+  width: 50%
 }
 
 .loginImage img{
@@ -172,7 +172,7 @@ background-color: #40826D;
 }
 
 .aboutImageContainer{
-  width: 45%;
+  width: 50%;
 }
 
 .aboutImageContainer img{
@@ -192,3 +192,52 @@ background-color: #40826D;
 }
 
 /* Styles for Sign Up Component*/
+
+.signUpFormContainer{
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.signUpImage{
+  width: 50%
+}
+
+.signUpImage img{
+  width: 90%;
+  height: 90vh
+}
+
+.signUpForm{
+  display: flex;
+  flex-flow: column nowrap;
+  width: 45%;
+}
+
+.signUpForm h1{
+  text-align: center;
+  font-size: 8vh;
+  background-color: #40826D;
+}
+
+.signUpForm button{
+  width: 30%;
+  align-self: center;
+  font-size: 3vh;
+  }
+
+.signUpForm input{
+  width: 50%;
+  align-self: center;
+  font-size: 3vh;
+  margin: 1%;
+}
+
+.signUpForm label{
+  text-align: center;
+  font-size: 3vh;
+}
+
+.signUpErrors{
+  color:firebrick;
+  font-style: italic;
+}
