Routed contact page and gave it styling

--- a/frontend2-3/src/App.css
+++ b/frontend2-3/src/App.css
@@ -35,7 +35,7 @@
   background-color: #40826D;
   display:flex;
   padding-top:5px;
-padding-bottom: 10px;
+padding-bottom: 30px;
 
 }
 
@@ -130,7 +130,7 @@ background-color: #bcbcbecc;
   left: 50%;
   margin-left: -3px;
   margin-right: 5%;
-  top: 0;
+  margin-top: 20px;
 }
 
 
@@ -147,7 +147,8 @@ background-color: #bcbcbecc;
 }
 
 .loginImage{
-  width: 50%
+  width: 50%;
+margin-top: 7px;
 }
 
 .loginImage img{
@@ -258,7 +259,6 @@ background-color: #40826D;
   font-size: 8vh;
   background-color: #40826D;
 }
-
 .signUpForm button{
   width: 30%;
   align-self: center;
@@ -280,4 +280,14 @@ background-color: #40826D;
 .signUpErrors{
   color:firebrick;
   font-style: italic;
+}
+
+
+
+/*CONTACT*/
+
+.contactImage{
+  height:300px;
+  margin-bottom:-60px;
+  margin-top:40px;
 }
