created logout function. Logout is now conditionally rendered. Working on Add article button.

--- a/frontend2-3/src/App.css
+++ b/frontend2-3/src/App.css
@@ -102,9 +102,10 @@ background-color: #bcbcbecc;
 }
 
 #dashboardTitle{ 
-  text-align: middle; 
+  text-align: center; 
   border-bottom: 1px solid black; 
   padding-bottom: 15px; 
+  display: inline-block; 
 }
 
 .dashLink{
