--- a/frontend2-3/src/App.css
+++ b/frontend2-3/src/App.css
@@ -103,9 +103,11 @@ background-color: #bcbcbecc;
 
 #dashboardTitle{ 
   text-align: center; 
-  border-bottom: 1px solid black; 
-  padding-bottom: 15px; 
-  display: inline-block; 
+  display: inline-block;
+  margin-bottom: 0; 
+}
+header{
+border-bottom: 1px solid black; 
 }
 
 .dashLink{
