--- a/frontend2-3/src/App.css
+++ b/frontend2-3/src/App.css
@@ -294,3 +294,12 @@ background-color: #40826D;
   margin-bottom:-60px;
   margin-top:40px;
 }
+
+.UpdateModalContainer{
+position: fixed; 
+top: 50%; 
+left: 50%;
+transform: translate(-50%,-50%);
+background-color: skyblue; 
+z-index: 1000 
+}
