--- a/frontend2-3/src/App.css
+++ b/frontend2-3/src/App.css
@@ -34,7 +34,6 @@
   display:flex;
   padding-top:5px;
   padding-bottom: 16px;
-  padding-bottom: 30px;
 }
 
 .NAVBAR a {
@@ -52,7 +51,7 @@
 
 .NAVBAR a:hover {
   text-decoration: underline;
-  color: lightgray;
+  color: rgb(230, 230, 230);
 }
 
 
@@ -250,6 +249,17 @@ background-color: #40826D;
 
 .landingText {
   width: 40%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+@media only screen and (max-width: 768px) {
+  .landingText {
+    width: 100%;
+  }
+  .landingPageImageContainer{
+    width: 100%;
+  }
 }
 
 /* Styles for Sign Up Component*/
