--- a/frontend2-3/src/App.css
+++ b/frontend2-3/src/App.css
@@ -464,3 +464,22 @@ background-color: #40826D;
   z-index: 1000; 
   width: 50%; 
   }
+
+  .edit-container{
+    display:flex; 
+    flex-direction: column; 
+  }
+
+  .ModalContainer{
+  position: fixed; 
+  top: 50%; 
+  left: 50%;
+  transform: translate(-50%,-50%);
+  display: flex; 
+  flex-direction:column;
+  background-color: skyblue; 
+  border: 1px solid deepskyblue; 
+  border-radius: 30px; 
+  width: 50%; 
+  padding: 2rem; 
+  }
